fix for responisive on ios & button on ios

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,14 +16,12 @@ width: 100%;
 
 
 #wrapper{
-max-width: 100%;
-width: 940px;
+max-width: 940px;
 margin: 0 auto;
 }
 
 .main{
-max-width: 100%;
-width: 940px;
+max-width: 940px;
 float: left;
 }
 
@@ -137,6 +135,7 @@ font-family: 'Lato', sans-serif;
 font-size: 14px;
 font-weight: bold;
 cursor: pointer;
+-webkit-appearance: none; -moz-appearance: none;appearance: none;
 }
 
 
